--- a/mexico-14.0/l10n_mx_check_printing/report/print_check.xml
+++ b/mexico-14.0/l10n_mx_check_printing/report/print_check.xml
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col col-8"> </div>
             <div class="col col-2 text-left">
-                <span t-esc="page['date']"/>
+                <span t-esc="page['payment_date']"/>
             </div>
             <div class="col col-2"> </div>
         </div>
@@ -38,31 +38,31 @@
 
 <template id="bbva_bancomer_check">
     <div>
-        <br/><br/><br/><br/>
-        <div class="row" style="margin-left: 40px;">
-            <div class="col col-3 text-left offset-6" style="padding-top:18px;">
-                 <span t-esc="page['date']"/>
+        <br/><br/><br/>
+        <div class="row">
+            <div class="col col-2 text-left offset-8" style="padding-top:2px;">
+               <span t-esc="page['payment_date']"/>
             </div>
             <div class="col col-2"> </div>
         </div>
-        <br/>
-        <div class="row" style="margin-left: 16px; margin-top: 6px;">
-            <div class="col col-7 text-left offset-1">
+        <br/><br/><br/>
+        <div class="row">
+            <div class="col col-7 text-left offset-1" style="padding-top:8px;">
                          <span t-esc="page['partner_name']"/>
             </div>
-            <div class="col col-4 text-left" style="margin-left: 20px;">
-                             <span t-esc="page['amount']"/>
+            <div class="col col-4 text-left" style="padding-top:8px;">
+                            <span t-esc="page['amount']"/>
             </div>
         </div>
-        <br/>
-        <div class="row" style="margin-left: 16px; margin-top: 4px;">
-            <div class="col col-11 text-left offset-1">
-                        <span t-esc="page['amount_in_word']"/>
+        <br/><br/>
+        <div class="row">
+            <div class="col col-11 text-left offset-1" style="padding-top:5px;">
+                       <span t-esc="page['amount_in_word']"/>
             </div>
         </div>
         <br/><br/><br/><br/><br/><br/><br/>
         <div class="row">
-            <div class="col col-2 text-left offset-9" style="padding-top:4px;">
+            <div class="col col-2 text-left offset-9">
                              <span t-if="page['sequence_number']" t-esc="page['sequence_number']"/>
             </div>
             <div class="col col-1"> </div>
@@ -75,7 +75,7 @@
         <br/>
         <div class="row">
             <div class="col col-2 offset-8 text-left" style="padding-top:8px;">
-              <span t-esc="page['date']"/>
+              <span t-esc="page['payment_date']"/>
             </div>
             <div class="col col-2"> </div>
         </div>
@@ -114,7 +114,7 @@
         <br/><br/>
         <div class="row">
             <div class="col col-4 text-left offset-8" style="padding-top:7px;">
-                               <span t-esc="page['date']"/>
+                               <span t-esc="page['payment_date']"/>
             </div>
         </div>
         <br/><br/><br/>
@@ -155,7 +155,7 @@
         <br/>
         <div class="row">
             <div class="col col-3 text-left offset-6" style="padding-top:8px;">
-                           <span t-esc="page['date']"/>
+                           <span t-esc="page['payment_date']"/>
             </div>
             <div class="col col-3"> </div>
         </div>
@@ -190,7 +190,7 @@
         <br/><br/>
         <div class="row">
             <div class="col col-3 text-left offset-6" style="padding-top:12px;">
-                           <span t-esc="page['date']"/>
+                           <span t-esc="page['payment_date']"/>
             </div>
             <div class="col col-3"> </div>
         </div>
