--- a/mexico-14.0/l10n_mx_check_printing/views/account_payment_view.xml
+++ b/mexico-14.0/l10n_mx_check_printing/views/account_payment_view.xml
@@ -10,4 +10,12 @@
             </xpath>
         </field>
     </record>
+
+    <record id="change_amt_in_word" model="ir.actions.server">
+        <field name="name">Change Amount in Word</field>
+        <field name="model_id" ref="account.model_account_payment"/>
+        <field name="state">code</field>
+        <field name="code">records.change_amt_in_word()</field>
+    </record>
+
 </odoo>
