--- a/mexico-14.0/l10n_mx_check_printing/report/print_check.xml
+++ b/mexico-14.0/l10n_mx_check_printing/report/print_check.xml
@@ -3,13 +3,13 @@
 <template id="generic_check">
     <div>
         <br/><br/><br/><br/>
-<!--        <div class="row">-->
-<!--            <div class="col col-8"> </div>-->
-<!--            <div class="col col-2 text-left">-->
-<!--                <span t-esc="page['payment_date']"/>-->
-<!--            </div>-->
-<!--            <div class="col col-2"> </div>-->
-<!--        </div>-->
+        <div class="row">
+            <div class="col col-8"> </div>
+            <div class="col col-2 text-left">
+                <span t-esc="page['date']"/>
+            </div>
+            <div class="col col-2"> </div>
+        </div>
         <br/><br/><br/>
         <div class="row">
             <div class="col col-2"> </div>
@@ -39,12 +39,12 @@
 <template id="bbva_bancomer_check">
     <div>
         <br/><br/><br/>
-<!--        <div class="row">-->
-<!--            <div class="col col-2 text-left offset-8" style="padding-top:2px;">-->
-<!--               <span t-esc="page['payment_date']"/>-->
-<!--            </div>-->
-<!--            <div class="col col-2"> </div>-->
-<!--        </div>-->
+        <div class="row">
+            <div class="col col-2 text-left offset-8" style="padding-top:2px;">
+               <span t-esc="page['date']"/>
+            </div>
+            <div class="col col-2"> </div>
+        </div>
         <br/><br/><br/>
         <div class="row">
             <div class="col col-7 text-left offset-1" style="padding-top:8px;">
@@ -73,12 +73,12 @@
 <template id="banamex_check">
     <div>
         <br/>
-<!--        <div class="row">-->
-<!--            <div class="col col-2 offset-8 text-left" style="padding-top:8px;">-->
-<!--              <span t-esc="page['payment_date']"/>-->
-<!--            </div>-->
-<!--            <div class="col col-2"> </div>-->
-<!--        </div>-->
+        <div class="row">
+            <div class="col col-2 offset-8 text-left" style="padding-top:8px;">
+              <span t-esc="page['date']"/>
+            </div>
+            <div class="col col-2"> </div>
+        </div>
         <br/><br/><br/>
         <div class="row">
             <div class="col col-7 text-left offset-1" style="padding-top:5px;">
@@ -112,11 +112,11 @@
 <template id="hsbc_check">
     <div>
         <br/><br/>
-<!--        <div class="row">-->
-<!--            <div class="col col-4 text-left offset-8" style="padding-top:7px;">-->
-<!--                               <span t-esc="page['payment_date']"/>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="row">
+            <div class="col col-4 text-left offset-8" style="padding-top:7px;">
+                               <span t-esc="page['date']"/>
+            </div>
+        </div>
         <br/><br/><br/>
         <div class="row">
             <div class="col col-6 text-left offset-2" style="padding-top:8px;">
@@ -153,12 +153,12 @@
 <template id="santander_check">
     <div>
         <br/>
-<!--        <div class="row">-->
-<!--            <div class="col col-3 text-left offset-6" style="padding-top:8px;">-->
-<!--                           <span t-esc="page['payment_date']"/>-->
-<!--            </div>-->
-<!--            <div class="col col-3"> </div>-->
-<!--        </div>-->
+        <div class="row">
+            <div class="col col-3 text-left offset-6" style="padding-top:8px;">
+                           <span t-esc="page['date']"/>
+            </div>
+            <div class="col col-3"> </div>
+        </div>
         <br/><br/><br/><br/>
         <div class="row">
             <div class="col col-7 text-left offset-1">
@@ -188,12 +188,12 @@
 <template id="scotiabank_check">
      <div>
         <br/><br/>
-<!--        <div class="row">-->
-<!--            <div class="col col-3 text-left offset-6" style="padding-top:12px;">-->
-<!--                           <span t-esc="page['payment_date']"/>-->
-<!--            </div>-->
-<!--            <div class="col col-3"> </div>-->
-<!--        </div>-->
+        <div class="row">
+            <div class="col col-3 text-left offset-6" style="padding-top:12px;">
+                           <span t-esc="page['date']"/>
+            </div>
+            <div class="col col-3"> </div>
+        </div>
         <br/><br/><br/><br/>
         <div class="row">
             <div class="col col-7 text-left offset-1">
