--- a/mexico-14.0/l10n_mx_check_printing/report/print_check_generic.xml
+++ b/mexico-14.0/l10n_mx_check_printing/report/print_check_generic.xml
@@ -10,16 +10,17 @@
     </t>
 </template>
 
-<report id="action_print_check_generic"
-    string="Print Check Generic"
-    model="account.payment"
-    name="l10n_mx_check_printing.print_check_generic"
-    file="l10n_mx_check_printing.print_check_generic"
-    report_type="qweb-pdf"
-    attachment_use="True"
-    attachment="'check_'+(object.partner_id and object.partner_id.name or 'Internal')+'_'+(object.name)+'_generic.pdf'"
-    paperformat="l10n_mx_check_printing.paperformat_check_mx"
-    print_report_name="'Check Generic - %s' % (object.partner_id.name or '',)"
-    menu="False"
-/>
+<record id="action_print_check_generic" model="ir.actions.report">
+        <field name="name">Print Check Generic</field>
+        <field name="model">account.payment</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">l10n_mx_check_printing.print_check_generic</field>
+        <field name="report_file">l10n_mx_check_printing.print_check_generic</field>
+        <field name="print_report_name">'Check Generic - %s' % (object.partner_id.name or '',)</field>
+        <field name="binding_model_id" ref="model_account_payment"/>
+        <field name="binding_type">report</field>
+        <field name="paperformat_id" ref="l10n_mx_check_printing.paperformat_check_mx"/>
+        <field name="attachment_use">True</field>
+        <field name="attachment">'check_'+(object.partner_id and object.partner_id.name or 'Internal')+'_'+(object.name)+'_generic.pdf'</field>
+    </record>
 </odoo>
